Fixed positioning of the slider to look more aligned, fixed a grammar error in data.js, and added some css to the about usce paragraph

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -58,14 +58,19 @@ h2 {
 }
 
 .header {
-
   font-size: 20px;
 }
 
 .about {
   font-family: 'Roboto', sans-serif;
-  text-align: center;
+  text-align: justify;
+  width: 1000px;
+  height: 120px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.5;
 }
+
 
 .toggle .collapsed {
   display: flex;
