--- a/src/slider/slider.css
+++ b/src/slider/slider.css
@@ -14,7 +14,7 @@
   .slide {
     width: 100%;
     height: 100%;
-    position: absolute;
+    /* position: absolute; */
     opacity: 1;
     transition: opacity ease-in-out 0.4s;
   }
